k8s/backend-deployment.yaml
#backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobapp-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jobapp-backend
  template:
    metadata:
      labels:
        app: jobapp-backend
    spec:
      containers:
        - name: backend
          image: jobapp-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "512Mi"
