k8s/jobapp-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobapp-mysql
  labels:
    app: jobapp-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobapp-mysql
  template:
    metadata:
      labels:
        app: jobapp-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: jobapp-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jobapp-mysql
  labels:
    app: jobapp-mysql
spec:
  selector:
    app: jobapp-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
