k8s/mysql-deployment-service.yaml
#mysql-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobapp-mysql
spec:
  selector:
    matchLabels:
      app: jobapp-mysql
  template:
    metadata:
      labels:
        app: jobapp-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jobapp-mysql
spec:
  selector:
    app: jobapp-mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
